--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
         ],
         "linebreak-style": [
             "error",
-            "unix"
+            "unix",
+            "windows"
         ],
         "quotes": [
             "error",
