--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
+    "request": "^2.88.0",
     "sequelize": "^4.41.2"
   },
   "devDependencies": {
