--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.3.14",
     "mysql2": "^1.5.3",
+    "ngrok": "^3.1.0",
     "nodemon": "^1.18.7",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
